chore: rename project

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pp_exp",
+  "name": "pp_exp_app",
   "version": "1.0.0",
   "description": "post processing experiments for SPA",
   "scripts": {
